# Tech-addict-predictor

./: Model.py  README.md  dataset.csv  knn.pkl  main.py  pre_build.sh  pyproject.toml  requirements.txt
