[tool.poetry]
name = "tech-addict-predictor"
version = "0.1.0"
description = "Predict future trends in technology adoption using ML"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
numpy = "^1.21.2"
scikit-learn = "^0.24.2"
flask = "^2.0.1"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"
